# OpenGL-demo-app

./: .gitignore  CMakeLists.txt  Engine.sln  OpenGLCourseApp.sln  README.md
EditorApp/: CMakeLists.txt  Editor.cpp  EditorApp.vcxproj  imgui.ini
Engine/: Application.h  CMakeLists.txt  Core.h  Engine.h  Engine.vcxproj  Engine.vcxproj.filters  EntryPoint.h  Object3D.cpp  Object3D.h  TimeManager.h
Engine/Resources/Engine/Meshes/: camera.mtl  plane.gltf  sphere.gltf
Engine/Resources/Engine/Shaders/: BRDFIntegrationShader.frag  BRDFIntegrationShader.glsl  BRDFIntegrationShader.vert  CubemapToEquirectangular.glsl  DebugShader.glsl  EquirectangularToCubemap.glsl  EquirectangularToCubemap.vert  GBufferShader.glsl  IBLPrefilterShader.frag  IBLPrefilterShader.glsl  IrradianceShader.glsl  LightPassShader.glsl  LightShader.glsl  LineDebugShader.glsl  OutlineShader.glsl  PBR_GeomPassShader.glsl  PBR_LightPassShader.frag  PBR_LightPassShader.glsl  PBR_LightPassShader.vert  PhongShader.frag  PhongShader.glsl  PhongShader.vert  PickingShader.glsl  PointDebugShader.glsl  ReflectionShader.glsl  RefractionShader.glsl  SSAOBlurPassShader.frag  SSAOBlurPassShader.glsl  SSAOPassShader.frag  SSAOPassShader.glsl  ScreenBufferDisplayShader.glsl  SimpleDepthShader.glsl  SkyboxShader.glsl  TerrainShader.glsl  TestShader.glsl  TextureTransformShader.glsl  UIShader.glsl  normalDisplayShader.glsl  shader.glsl
Engine/Resources/Engine/Shaders/PostProcess/: PostProcessShader_default.glsl  PostProcessShader_grayscale.glsl  PostProcessShader_inversion.glsl  PostProcessingShader_kernel.glsl
Engine/Resources/Engine/Shaders/include/: defines.glsl  functions.glsl  structs.glsl  uniforms.glsl
Engine/Resources/Primitives/: quad.h
Engine/Resources/Shaders/: RefractionShader.vert  SimpleShader.frag  shader.frag
Engine/include/: Application.h  EntryPoint.h  GraphicsEngine.h  sge.h
Engine/include/sge/: Context.h  DirectionalLight.h  EditorCamera.h  Engine.h  EventSystem.h  FileUtil.h  FlyCamera.h  Grid.h  ICamera.h  Keyboard.h  Light.h  Material.h  Mesh.h  Model.h  Mouse.h  Object3D.h  ObjectSelection.h  PointLight.h  PostProcess.h  RenderBufferObject.h  Renderer2D.h  Scene.h  ScreenBufferProjector.h  ScreenQuad.h  Shader.h  Skybox.h  Texture.h  Transform.h  Utils.h  VertexBufferObject.h  Window.h
Engine/src/: AABB.cpp  AABB.h  Animation.cpp  Animation.h  AnimationLoader.cpp  AnimationLoader.h  Animator.cpp  Animator.h  Application.cpp  Application.h  ApplicationConstants.h  ArchiveInitializer.h  Archiver.cpp  Archiver.h  Assets.cpp  Assets.h  AssimpGLMHelpers.h  Bone.cpp  Bone.h  Box.cpp  Box.h  CacheSystem.cpp  CacheSystem.h  CameraControllerFreeLook.cpp  CameraControllerFreeLook.h  CameraControllerOrbit.cpp  CameraControllerOrbit.h  CommonShaders.cpp  CommonShaders.h  CommonTextures.cpp  CommonTextures.h  Component.cpp  Component.h  Configurations.h  Context.cpp  Context.h  Core.h  CoroutineSystem.cpp  CoroutineSystem.h  Cubemap.cpp  (+221 more)
Game/: CMakeLists.txt  FlyCamera.h  imgui.ini  main.cpp
ImguiDemo/: ImguiDemo.cpp  ImguiDemo.vcxproj  ImguiDemo.vcxproj.filters  MockMenu.cpp  MockMenu.h
InstancingSample/: CMakeLists.txt  InstancingSample.cpp
LoadModelSample/: LoadModelSample.vcxproj  Source.cpp
NativeScripts/: CMakeLists.txt  CameraScript.h  CursorScript.h  EnemyController.h  NativeScripts.h  NativeScriptsLoader.cpp  NativeScriptsLoader.h  NativeScriptsRegister.cpp  NativeScriptsRegister.h  PlayerController.h
NormalMapSample/: CMakeLists.txt  NormalMapSample.vcxproj  Source.cpp
OceanSample/: CMakeLists.txt  GUIHandler.cpp  GUIHandler.h  OceanSample.vcxproj  OceanSample.vcxproj.filters  Source.cpp  imgui.ini
OceanSample/Resources/Content/Shaders/: OceanFragmentShader.frag  OceanShader.glsl  OceanVertexShader.vert  PickingShader.frag  WaterShader.glsl
OceanSample/Resources/Engine/Shaders/: PhongShader.frag  PhongShader.vert  shader.frag
OceanSample/Resources/Shaders/: OceanFragmentShader.frag  OceanVertexShader.vert
OpenGLCourseApp/: ApplicationConstants.h  Camera.cpp  Camera.h  DirectionalLight.cpp  DirectionalLight.h  Material.cpp  Mesh.cpp  Mesh.h  Model.cpp  OpenGLCourseApp.vcxproj  OpenGLCourseApp.vcxproj.filters  PointLight.cpp  Renderer.h  Shader.cpp  (+13 more)
PhysxSample/: CMakeLists.txt  PhysxSample.vcxproj  Source.cpp  imgui.ini
(+205 files in other folders)
